<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/enteritem"
                android:layout_centerHorizontal="true"
                android:textColor="#D1030303"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/babyItem"
                android:layout_marginTop="14dp"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="textCapWords"
                android:hint="@string/hintItem"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemQuantity"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/hintQItem"
                android:inputType="textCapWords"
                android:layout_below="@id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/ItemColor"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/hintCItem"
                android:inputType="textCapWords"
                android:layout_below="@id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/ItemSize"
                android:textColor="#E2202020"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/hintSItem"
                android:inputType="number"
                android:layout_below="@id/ItemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_marginTop="10dp"
                android:textSize="14dp"
                android:textStyle="bold"
                android:background="#E2202020"
                android:text="@string/saveb"
                android:textColor="@android:color/white"
                android:layout_below="@id/ItemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>